# QtLibcameraForRpi

./: CMakeLists.txt  README.md
qcam/: main_window.cpp
